[gd_scene load_steps=25 format=2]

[ext_resource path="res://res/popups/ModesPopUp.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/Texture.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/roll_dices_screen.gd" type="Script" id=3]
[ext_resource path="res://res/Assets/Buttons/Menu.png" type="Texture" id=4]
[ext_resource path="res://res/Assets/RollDices/Text.png" type="Texture" id=5]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 2.png" type="Texture" id=6]
[ext_resource path="res://res/Assets/RollDices/Window.png" type="Texture" id=7]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 6.png" type="Texture" id=8]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 3.png" type="Texture" id=9]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 8.png" type="Texture" id=10]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 5.png" type="Texture" id=11]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 9.png" type="Texture" id=12]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 10.png" type="Texture" id=13]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 12.png" type="Texture" id=14]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 1.png" type="Texture" id=15]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 13.png" type="Texture" id=16]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 11.png" type="Texture" id=17]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 4.png" type="Texture" id=18]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 7.png" type="Texture" id=19]
[ext_resource path="res://res/Assets/AnimatedFrames/FRAME 14.png" type="Texture" id=20]
[ext_resource path="res://res/Assets/Sounds/Clique bot√µes.wav" type="AudioStream" id=21]
[ext_resource path="res://res/Assets/Sounds/Som dado.wav" type="AudioStream" id=22]
[ext_resource path="res://res/fade_in/FadeIn.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[node name="RollDicesScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="Texture" parent="." instance=ExtResource( 2 )]
margin_right = 5001.12
margin_bottom = 2813.0

[node name="Button" type="Button" parent="."]
margin_left = 925.0
margin_top = 203.0
margin_right = 1705.0
margin_bottom = 933.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button"]
position = Vector2( 390, 365 )
frames = SubResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 202.0
margin_top = 375.0
margin_right = 863.0
margin_bottom = 764.0
rect_scale = Vector2( 0.87, 0.87 )
texture = ExtResource( 7 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TextureRect3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 590.0
margin_bottom = 365.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextureRect3/CenterContainer"]
margin_left = 78.0
margin_top = 41.0
margin_right = 492.0
margin_bottom = 304.0
texture = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1743.0
margin_top = 80.0
margin_right = 1833.0
margin_bottom = 134.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModesPopUp" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="FadeIn" parent="." instance=ExtResource( 23 )]
visible = false
[connection signal="pressed" from="Button" to="." method="_on_TextureRect_pressed"]
[connection signal="animation_finished" from="Button/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
